fix for new entando 8 hub